--- a/styles.css
+++ b/styles.css
@@ -116,14 +116,16 @@ body {
   color: white;
 }
 
-.you-picked-button {
+.you-picked-button,
+.house-picked-button {
   width: 110px;
   height: 110px;
   border-radius: 55px;
   border-width: 13px;
 }
 
-.you-pick {
+.you-pick,
+.house-pick {
   width: 40px;
   height: 45px;
 }
