--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
   flex-direction: column;
   align-items: center;
   margin: 2% auto;
+  border: 5px solid blue;
 }
 
 .score-container {
@@ -103,17 +104,20 @@ body {
 }
 
 .user-and-computer-pick {
-  display: flex;
-  justify-content: space-between;
-  width: 300px;
+  width: 500px;
+  display: grid;
+  grid-template-columns: minmax(0,1fr) minmax(0,1fr) minmax(0,1fr) minmax(0,1fr) minmax(0,1fr) minmax(0,1fr);
+  grid-template-areas: '. yp . wl . hp .';
+  justify-items: center;
+  align-items: center;
   height: 200px;
   margin-top: 10%;
-  margin-left: -10%;
-  padding: 0 5%;
+  padding: 0 0%;
   font-weight: 600;
   font-size: 13px;
   text-align: center;
   color: white;
+  border: 5px solid green;
 }
 
 .you-picked-button,
@@ -139,6 +143,11 @@ body {
   border: none;
   border-radius: 45px;
 }
+
+.win-or-lose {
+  font-weight: 800;
+}
+
 
 
 .attribution { font-size: 11px; text-align: center; }
