--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,6 @@ body {
   flex-direction: column;
   align-items: center;
   margin: 2% auto;
-  border: 5px solid blue;
 }
 
 .score-container {
@@ -107,18 +106,18 @@ body {
   width: 350px;
   display: flex;
   justify-content: space-around;
-  align-items: center;
+  /*align-items: center;*/
   height: 200px;
   margin-top: 10%;
   font-weight: 600;
   font-size: 13px;
   text-align: center;
   color: white;
-  border: 5px solid green;
 }
 
 .picked-header {
-  margin-top: -50px;
+  margin-top: 0;
+  margin-bottom: 30px;
 }
 
 .you-picked-button,
@@ -150,8 +149,9 @@ body {
 }
 
 .result-container {
-  margin-left: 20%;
-  margin-right: 20%;
+  margin-left: 5%;
+  margin-right: 5%;
+  align-self: center ;
 }
 
 .play-again-button {
@@ -161,12 +161,14 @@ body {
   border: none;
   color: red;
   font-size: smaller;
+  cursor: pointer;
 }
 
 .youWinLose {
-  width: 100px;
-  font-size: 2.5rem;
-
+  width: 200px;
+  font-size: 2rem;
+  margin-bottom: 5px;
+  font-weight: 700;
 }
 
 
