--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 
 .container {
   width: 700px;
-  height: 450px;
+  height: 420px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -204,7 +204,7 @@ body {
   width: 215px;
   height: 215px;
   border-radius: 50%;
-  background-color: blue;
+  background-color: rgba(255, 255, 255, 0.03);
   position: absolute;
   left: 50%;
   top: 60%;
@@ -212,17 +212,17 @@ body {
   z-index: -1;
 }
 
-.circle:nth-child(3) {
+.circle:nth-child(2) {
   width: 300px;
   height: 300px;
-  background-color: hsl(237, 49%, 15%);
+  background-color: rgba(255, 255, 255, 0.03);
   z-index: -3;
 }
 
-.circle:nth-child(4) {
-  width: 430px;
-  height: 430px;
-  background-color: blue; 
+.circle:nth-child(3) {
+  width: 410px;
+  height: 410px;
+  background-color: rgba(255, 255, 255, 0.03); 
   z-index: -4;
 }
 
