--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,6 @@ body {
   font-family: 'Barlow Semi Condensed', sans-serif;
   min-height: 100vh;
   background: radial-gradient(circle 100vh at 50% 0%, hsl(214, 47%, 23%), hsl(237, 49%, 15%));
-  padding: 0;
-  margin: 0;
 }
 
 .none {
@@ -36,6 +34,7 @@ body {
   color: hsl(229, 64%, 46%);
   background-color: white;
   border-radius: 4px;
+  padding: 10px;
 }
 
 .score-header {
@@ -44,10 +43,6 @@ body {
 
 .logo {
   width: 100px;
-}
-
-.inside-score-board {
-  padding: 10px;
 }
 
 .score {
@@ -72,38 +67,61 @@ body {
   gap: 10px;
 }
 
-.user-input button>img {
+.btn-style {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: rgb(230, 230, 230);
+  cursor: pointer;
+  box-shadow: inset 0px 5px 0px rgba(0, 0, 0, 0.2);
+  border: none;
+}
+
+.btn-style img {
   width: 40px;
   height: 45px;
 }
 
-.user-input button {
-  width: 120px;
-  height: 120px;
+.paper {
+  width: 130px;
+  height: 130px;
   border-radius: 50%;
-  background-color: rgb(230, 230, 230);
-  cursor: pointer;
+  background: radial-gradient(hsl(230, 89%, 62%), hsl(230, 89%, 65%));
+  display: flex;  
+  box-shadow: inset 0px -5px  0px rgba(0, 0, 0, 0.2);
+}
+
+.scissors {
+  width: 130px;
+  height: 130px;
+  border-radius: 50%;
+  background: radial-gradient(hsl(39, 89%, 49%), hsl(40, 84%, 53%));
+  display: flex;  
+  box-shadow: inset 0px -5px  0px rgba(0, 0, 0, 0.2);
+}
+
+.rock {
+  width: 130px;
+  height: 130px;
+  border-radius: 50%;
+  background: radial-gradient(hsl(349, 71%, 52%), hsl(349, 70%, 56%));
+  display: flex;  
+  box-shadow: inset 0px -5px  0px rgba(0, 0, 0, 0.2); 
 }
 
 .input-paper-scissors {
-  width: 290px;
+  width: 300px;
   display: flex;
   justify-content: space-between;
 }
 
-.input-paper-button {
-  border: 12px solid rgb(73, 133, 255);
-}
-
-.input-scissors-button {
-  border: 12px solid orange;
-}
-
+.input-paper-button,
+.input-scissors-button,
 .input-rock-button {
-  border: 12px solid red;
+  margin: auto auto;
 }
 
-.user-and-computer-pick {
+.picked-container {
   width: 500px;
   display: flex;
   justify-content: space-around;
@@ -115,7 +133,8 @@ body {
   color: white;
 }
 
-.picked-header {
+.house-header, 
+.user-header {
   width: 150px;
   height: 20px;
   margin-top: 0;
@@ -126,8 +145,6 @@ body {
 .null-house {
   background-color: hsl(237, 49%, 15%);
   opacity: 0.6;
-  margin-top: 25px;
-  margin-bottom: 25px;
   width: 100px;
   height: 100px;
   align-self: center;
@@ -136,16 +153,8 @@ body {
   border-radius: 50%;
 }
 
-.you-picked-button,
-.house-picked-button {
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  border-width: 18px;
-}
-
-.you-pick,
-.house-pick {
+.house-btn-img, 
+.user-btn-img {
   width: 50px;
   height: 50px;
 }
@@ -156,9 +165,9 @@ body {
 }
 
 .result-container {
-  margin-left: 10%;
+  align-self: center;
   margin-right: 10%;
-  align-self: center ;
+  margin-left: 5%;
 }
 
 .play-again-button {
@@ -186,19 +195,20 @@ body {
 
 
 .house-picked,
-.you-picked {
+.user-picked {
   width: 150px;
   height: 220px;
-  position: relative;
-}
-
-
-.house-picked,
-.you-picked {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  cursor: context-menu;
+  margin-left: 5%;
+  margin-right: 5%;
 }
+
+.user-house {
+  margin: auto auto;
+}
+
 
 
 .circle {
@@ -229,7 +239,7 @@ body {
 
 .rules-button {
   position: absolute;
-  right: 10%;
+  right: 5%;
   bottom: 20%;
   border: 1.5px solid hsl(217, 16%, 45%);
   border-radius: 4px;
@@ -255,6 +265,8 @@ body {
   width: 230px;
   height: 225px;
 }
+
+
 
 .rules-img {
   width: 200px;
@@ -358,7 +370,7 @@ body {
     margin-top: 20%;
   }
 
-  .user-and-computer-pick {
+  .picked-container {
     width: 250px;
     height: 280px; 
     margin-top: 15%;
@@ -372,7 +384,7 @@ body {
           'resultContainer resultContainer';
   }
 
-  .you-picked {
+  .user-picked {
     grid-area: youPickedContainer;
     margin-left: -30px;
     display: grid;
@@ -383,11 +395,11 @@ body {
       'you-picked-header';
   }
 
-  .you-picked .picked-btn-img {
+  .user-picked .user-choice {
     grid-area: picked-btn-img;
   }
   
-  .you-picked > p {
+  .user-picked > p {
     grid-area: you-picked-header;
     margin-top: 20px;
   }
@@ -403,7 +415,7 @@ body {
       'house-picked-header';
   }
 
-  .house-picked .picked-btn-img {
+  .house-picked .house-choice{
     grid-area: picked-btn-img;
   }
   
@@ -418,7 +430,7 @@ body {
 
   }
 
-  .picked-header {
+  .user-header {
     margin: 0;
   }
 
@@ -429,23 +441,25 @@ body {
     margin-bottom: 10px;
   }
   
-  .you-picked-button,
-  .house-picked-button {
+  .house-picked-btn,
+  .user-picked-btn {
     width: 100px;
     height: 100px;
     border-width: 12px;
     margin: 0;
   }
   
-  .you-pick,
-  .house-pick {
+  .user-btn-img,
+  .house-btn-img {
     width: 35px;
     height: 35px;
   }
 
-  .result-container {
-    margin: auto auto;
-  }
+   .result-container {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+  } 
 
   .circle {
     width: 130px;
@@ -485,6 +499,7 @@ body {
     margin-bottom: 10px;
 
   }
+
   
 
 .attribution {
