--- a/styles.css
+++ b/styles.css
@@ -335,17 +335,31 @@ body {
   .user-input {
     width: 300px;
     height: 200px;
-    background-size: 60% 6  0%;
-    background-position: center;
-    margin-top: 20%;
+    margin-top: 30%;
+    gap: 15px;
+  }
+
+  .bg-triangle {
+    width: 180px;
+    height: 180px;
+    margin-top: 50px;
+  }
+
+  .btn-style {
+    width: 80px;
+    height: 80px;
+  }
+
+  .btn-style img {
+    width: 35px;
+    height: 40px;
   }
   
-  
-  .user-input button {
+  .paper, .scissors, .rock {
     width: 100px;
     height: 100px;
   }
-  
+    
   .input-paper-scissors {
     width: 240px;
   }
@@ -362,20 +376,26 @@ body {
   }
 
   .rules-header {
-    text-align: center;
     justify-content: center;
+    margin-bottom: 10%;
   }
 
   .rules-container {
-    position: fixed;
-    margin: auto auto;
-    justify-content: center;
-    align-content: center;
-    top: 0;
-    left: 0;
+    position: static;
+    box-shadow:  none;
+    margin-top: 30%;
+  }
+
+  .bg-white {
     width: 100%;
     height: 100%;
-    z-index: 999;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: white;
+    z-index: 1000;
   }
 
   .rules-img {
@@ -383,6 +403,7 @@ body {
   }
 
   .picked-container {
+    border: 2px solid green;
     width: 250px;
     height: 280px; 
     margin-top: 15%;
@@ -403,16 +424,16 @@ body {
     justify-content: center;
     align-content: center;
     grid-template-areas:
-      'picked-btn-img'
-      'you-picked-header';
+      'user-picked-btn'
+      'user-picked-header';
   }
 
-  .user-picked .user-choice {
-    grid-area: picked-btn-img;
+   .user-choice {
+    grid-area: user-picked-btn;
   }
   
-  .user-picked > p {
-    grid-area: you-picked-header;
+  .user-header {
+    grid-area: user-picked-header;
     margin-top: 20px;
   }
 
@@ -423,15 +444,15 @@ body {
     justify-content: center;
     align-content: center;
     grid-template-areas:
-      'picked-btn-img'
+      'house-picked-btn'
       'house-picked-header';
   }
 
-  .house-picked .house-choice{
-    grid-area: picked-btn-img;
+  .house-choice{
+    grid-area: house-picked-btn;
   }
   
-  .house-picked > p {
+  .house-header {
     grid-area: house-picked-header;
     margin-top: 20px;
   }
