--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,14 @@
 body {
   font-family: 'Barlow Semi Condensed', sans-serif;
-  min-height: 100vh;
   background: radial-gradient(circle 100vh at 50% 0%, hsl(214, 47%, 23%), hsl(237, 49%, 15%));
+  min-height: 100vh;
+  margin: 0; /* Add margin to remove default body margin */
+  overflow-x: hidden; /* Hide horizontal scrollbar */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
 }
 
 .none {
@@ -14,7 +21,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 4% auto;
 }
 
 .score-container {
@@ -310,8 +316,10 @@ body {
 .attribution a { color: hsl(228, 45%, 44%); }
 
 @media screen and (max-width: 400px) {
+
   .container {
     width: 300px;
+    margin-top: -10vh;
   }
 
   .score-container {
@@ -370,7 +378,7 @@ body {
   .rules-button {
     position: absolute;
     bottom: 20px;
-    left: 48%;
+    left: 50%;
     transform: translateX(-50%);
   }
 
@@ -408,11 +416,11 @@ body {
 
   .picked-container {
     width: 250px;
-    height: 320px; 
+    height: 280px; 
     margin-top: 20%;
     display: grid;
     grid-template-columns: 80px 80px;
-    grid-template-rows: 250px 70px;
+    grid-template-rows: 250px 50px;
     justify-content: space-between;
     align-content: center;
     grid-template-areas: 
