--- a/styles.css
+++ b/styles.css
@@ -317,9 +317,16 @@ body {
 
 @media screen and (max-width: 400px) {
 
+  body {
+    justify-content: start;
+    align-items: center;
+  }
+
   .container {
     width: 300px;
-    margin-top: -30vh;
+    margin: 0;
+    padding-top: 50px; /* Adjust the value to set the desired space between container and top of the page */
+    padding: 20px;
   }
 
   .score-container {
@@ -444,6 +451,8 @@ body {
   
   .user-header {
     grid-area: user-header;
+    margin: auto auto;
+    margin-top: 0;
   }
 
   .house-picked {
@@ -522,9 +531,7 @@ body {
     width: 100%;
     font-size: 2.2rem;
     font-weight: 700;
-    margin-bottom: 10px;
-    margin-top: -30px;
-    text-align: center;
+    margin: 0;
 
   }
 
